                W I N G   C H A N G E S
----------------------------------------------------------
This file tracks the changes to Wing over time. Especially
with respect to new features and compatibility changes.
==========================================================

2017-05-18
 * Added max_items option to result sets so that you can artificially stop pagination after some arbitrary amount, rather than all the records in the database.

2017-03-04
 * Readding the prevention of joined queries on generated relationships.

2017-03-03
 * Removed a wierd query option on objectListManager search() in wing.angular.js.

2017-01-25
 * Don't prevent joined queries from performing a query on generated relationships.

2017-01-11
 * Do session check if session_id is passed to /api/_test

2017-01-02
 * Changed the output of Wing::Rest::Status over a potential security issue.

2016-12-30
 * UriPart role should also have had skip_duplicate turned on by default.

2016-12-28
 * UriPartOnInit role should have had skip_duplicate turned on by default.
 * Show job id in Wingman error message when not found.

2016-11-04
 * _order_by can now be an array.

2016-10-18
 * Backed out change added on 2016-10-14, because the user decided not to use it, and it was causing other problems elsewhere in existing apps.

2016-10-14
 * lib/DB/Result.pm now has verify_creation_params setting the values of required params so that they can be used in a can_edit() check when creating an object.

2016-10-13
 * S3Image now includes the object id in the local cache path.

2016-10-07
 * Add option to skip Wing's field uniqueness check, if the field value is null.

2016-10-04
 * Allow joined queries on Rest generate_relationship().

2016-08-29
 * Switched to our own markdown parser for better security, speed, and formatting.

2016-08-25
 * Added better precheck for unique fields to check for unique indexes as well as unique qualifiers. 
 * Added in page targets to Web Filtered Fields.

2016-08-22