@@ -34,9 +34,6 @@ sub wing_webfiltered_field {
             if (defined $value) {
                 my @unsorted = split /\s+/, $value;
                 my @sorted = map {$_->[1]} sort {$a->[0] <=> $b->[0]} map {[length $_, $_]} @unsorted;
-                if (length($sorted[-1]) > 200) {
-                    ouch 442, $sorted[-1].', in '.$field.' is too long. 200 characters max.', $field;
-                }
                 my $html = $value;
                 Wing::ContentFilter::format_html(\$html, exists $options->{format_html} ? $options->{format_html} : { entities => 1, with_markdown => $options->{use_markdown} });
                 Wing::ContentFilter::find_and_format_uris(\$html, exists $options->{find_and_format_uris} ? $options->{find_and_format_uris} : { youtube => 1, links => 1, images => 1, vimeo => 1});
