@@ -4,6 +4,10 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2017-06-09
+ * WebFilteredField no longer puts a restriction on the length of a string.
+ * S3Image increased filename size from 60 to 255. 
+
 2017-05-18
  * Added max_items option to result sets so that you can artificially stop pagination after some arbitrary amount, rather than all the records in the database.
 
